@@ -1,3 +1,7 @@
+Thu Dec 22 18:53:14 2005  Tim Janik  <timj@gtk.org>
+
+	* gobject.[hc]: renamed GUnowned to GInitiallyUnowned.
+
 Thu Dec 22 14:59:24 2005  Tim Janik  <timj@imendio.com>
 
 	* gvaluetypes.[hc]: implemented G_TYPE_GTPYE. applied patch
